--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -2897,7 +2897,7 @@ image::http://people.redhat.com/~llange/labimg/OpenShift-Scaling-rtest-prevented
 
 The message reads : "Forbidden: this image is prohibited by policy".
 
-== The end
+== The End
 
 Thanks a lot for attending the *Manage your Conatainers with OpenShift* Lab, we hope you enjoyed it.
 
