--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -23,7 +23,7 @@ You have seven VMs for your own use. Only the Gateway VM is reachable from the i
 
 [cols="3*", options="header"]
 |===
-| VM Name| FQDN | IP
+| VM Name| internal FQDN | internal IP
 | SSH Gateway & Proxy Server | gw.example.com | 192.168.0.250, Ports 22&80&443 are open
 | Master | master.example.com | 192.168.0.100, Port 8443 is open
 | Infranode | infranode.example.com | 192.168.0.101
@@ -62,6 +62,8 @@ rhpet@85.190.180.158's password:
 Last login: Sun Mar 13 16:28:23 2016 from ipbcc3d2c2.dynamic.kabel-deutschland.de
 [rhpet@gw ~]$
 ----
+
+TIP: Alternatively, if you have no ssh client, you can use the shell-in-a-box service. It is running on the Gateway on port 443. https://gw.example.com[SSH Login^]
 
 Then get the power of root:
 ----
