--- a/oscp-vie2017.adoc
+++ b/oscp-vie2017.adoc
@@ -47,12 +47,12 @@ You have seven VMs for your own use. Only the Gateway VM is reachable from the i
 
 First login to the ssh gateway with the user `rhpet`:
 
-To obtain your GUID and FQDN from the Gateway http://lab.rhpet.de[here^].
+To obtain your ip adress from the Gateway http://lab.rhpet.de[here^].
 
 Login into the ssh gateway with the user `rhpet` and the password you got from the instructor.
 
 ----
-[user@localhost ~]$ ssh rhpet@<your FQDN>
+[user@localhost ~]$ ssh rhpet@<your gateway ip adress>
 
 The authenticity of host '85.190.180.158 (85.190.180.158)' can't be established.
 ECDSA key fingerprint is SHA256:bsDGeuXiG1zpM3RlsN+RlaAPRaDSi6Y/sJoBP2IXNqU.
@@ -63,7 +63,7 @@ Last login: Sun Mar 13 16:28:23 2016 from ipbcc3d2c2.dynamic.kabel-deutschland.d
 [rhpet@gw ~]$
 ----
 
-TIP: Alternatively, if you have no ssh client, you can use the shell-in-a-box service. It is running on the Gateway on port 443. But be aware that some web browsers do not support direct Copy & Paste (you can use right click and then *Paste from browser*). So it might be more convenient to use a normal ssh client. https://gw.example.com[SSH Login^]
+TIP: Alternatively, if you have no ssh client, you can use the shell-in-a-box service. It is running on the Gateway on port 443. But be aware that some web browsers do not support direct Copy & Paste (you can use right click and then *Paste from browser*). So it might be more convenient to use a normal ssh client. This link works if you have configured the proxy server: https://gw.example.com[SSH Login into the gateway VM^]. As an alternetive you can type in https://<your gatway ip adress> in your browser.
 
 Then get the power of root:
 ----
